--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "npm": "^8.6.0"
   }
 }
