--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.2",
     "mongoose": "^6.2.0"
   },
   "devDependencies": {
