--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.2",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
