--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "onlydevs",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/graphql",
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@testing-library/jest-dom": "^5.16.3",
