--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "react-github-calendar":"3.3.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
