--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tadashi/gql-scalar-date": "^1.0.0",
     "apollo-server-express": "^3.6.2",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
