--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-chrome",
+            "type": "firefox",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3000/",
+            "reAttach": true,
+            "name": "Launch localhost",
+            "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
-        }
+        },
+
+    
     ]
 }
