--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "marked-react": "^1.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-debounce-input": "^3.2.5",
