--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^3.6.2",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
